force-app/main/default/objects/Loan_Condition__c/Loan_Condition__c.object-meta.xml
<CustomObject>
    <label>Loan Condition</label>
    <nameField>
        <label>Loan Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>