force-app/main/default/objects/Loan_Condition__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independent Financial Advice</fullName>
            </value>
            <value>
                <fullName>Independent Legal Advice</fullName>
            </value>
            <value>
                <fullName>Interpreters Certificate (Non English Speaking Borrower)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>