force-app/main/default/objects/Loan_Condition__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Loan Conditions</relationshipLabel>
    <relationshipName>Loan_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>