force-app/main/default/objects/Loan_Condition__c/fields/Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Reason__c</fullName>
    <label>Waiver Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>